--- a/config/primary/audio.cfg
+++ b/config/primary/audio.cfg
@@ -9,6 +9,7 @@ snd_deathcamera_volume "0";                                     // Changes the d
 snd_roundstart_volume "0";                                      // Changes the round start music volume (Max is 0.60)
 snd_menumusic_volume "0";                                       // Changes the main menu   music volume (Max is 0.60, .06 is 10% of that)
 snd_roundend_volume "0";                                        // Changes the round end   music volume (Max is 0.60)
+snd_voipvolume "0.5625";                                        // Voice volume
 snd_mvp_volume "0.03";                                          // Changes the music kit end of round MVP volume (Max is 0.60, .03 is 5% of that)
 -fin_loudshift;                                                 // Sets the global volume to our default
 //   %5 = 0.0025
