--- a/config/primary/binds.cfg
+++ b/config/primary/binds.cfg
@@ -18,9 +18,9 @@ bind "F5"             "screenshot;                                              
 bind "F6"             "autobuy;                                                             ; fin_keycontainer";                    // This is the F6  key
 bind "F7"             "ignorerad;                                                           ; fin_keycontainer";                    // This is the F7  key
 bind "F8"             "ignoremsg;                                                           ; fin_keycontainer";                    // This is the F8  key
-bind "F9"             "                                                                     ; fin_keycontainer";                    // This is the F9  key
+bind "F9"             "callvote StartTimeOut;                                               ; fin_keycontainer";                    // This is the F9  key
 bind "F10"            "cs_quit_prompt;                                                      ; fin_keycontainer";                    // This is the F10 key
-bind "F11"            "                                                                     ; fin_keycontainer";                    // This is the F11 key
+bind "F11"            "callvote Surrender;                                                  ; fin_keycontainer";                    // This is the F11 key
 bind "F12"            "jpeg multishot 100; screenshot; devshots_screenshot;                 ; fin_keycontainer";                    // This is the F12 key
 bind "PRINTSCREEN"    "                                                                     ; fin_keycontainer";                    // This is the print screen key
 bind "SCROLLLOCK"     "exec ./practice.cfg; exec ./config/utility/skinpictures.cfg;         ; fin_keycontainer";                    // This is the ScrLk key
@@ -61,8 +61,8 @@ bind "T"              "+fin_desubtick_reload;                                   
 bind "Y"              "+fin_desubtick_spray_menu;                                           ; fin_keycontainer";                    // This is the y key
 bind "U"              "messagemode";                                                                                                // This is the u key
 bind "I"              "messagemode2";                                                                                               // This is the i key
-bind "O"              "yaw 25 0 0;                                                          ; fin_keycontainer";                    // This is the o key
-bind "P"              "yaw 2571 1 0;                                                        ; fin_keycontainer";                    // This is the p key
+bind "O"              "                                                                     ; fin_keycontainer";                    // This is the o key
+bind "P"              "                                                                     ; fin_keycontainer";                    // This is the p key
 bind "["              "host_timescale_dec;                                                  ; fin_keycontainer";                    // This is the [ key
 bind "]"              "host_timescale_inc;                                                  ; fin_keycontainer";                    // This is the ] key
 bind  \               "host_timescale 1;                                                    ; fin_keycontainer";                    // This is the backslash key. Quotes are missing due to formatting issues with backslashes.
@@ -88,7 +88,7 @@ bind "K"              "                                                         
 bind "L"              "                                                                     ; fin_keycontainer";                    // This is the l key
 bind "SEMICOLON"      "disconnect;                                                          ; fin_keycontainer";                    // This is the ; key
 bind "'"              "                                                                     ; fin_keycontainer";                    // This is the apostrophe key
-bind "ENTER"          "                                                                     ; fin_keycontainer";                    // This is the return key
+bind "ENTER"          "+fin_desubtick_attack;                                               ; fin_keycontainer";                    // This is the return key
 bind "KP_4"           "viewmodel_offset_x 0;                                                ; fin_keycontainer";                    // This is the Numpad 4 key
 bind "KP_5"           "viewmodel_offset_y 0;                                                ; fin_keycontainer";                    // This is the Numpad 5 key
 bind "KP_6"           "viewmodel_offset_z 0;                                                ; fin_keycontainer";                    // This is the Numpad 6 key
@@ -108,7 +108,7 @@ bind ","              "radio1;                                                  
 bind "."              "radio3;                                                              ; fin_keycontainer";                    // This is the period/full stop key
 bind "/"              "                                                                     ; fin_keycontainer";                    // This is the slash key
 bind "RSHIFT"         "                                                                     ; fin_keycontainer";                    // This is the right shift key
-bind "UPARROW"        "                                                                     ; fin_keycontainer";                    // This is the up arrow key
+bind "UPARROW"        "yaw 2571 0 1                                                         ; fin_keycontainer";                    // This is the up arrow key
 bind "KP_1"           "incrementvar viewmodel_offset_x -2 2.5 -0.25;                        ; fin_keycontainer";                    // This is the Numpad 1 key
 bind "KP_2"           "incrementvar viewmodel_offset_y -2 2   -0.25;                        ; fin_keycontainer";                    // This is the Numpad 2 key
 bind "KP_3"           "incrementvar viewmodel_offset_z -2 2   -0.25;                        ; fin_keycontainer";                    // This is the Numpad 3 key
@@ -124,9 +124,9 @@ bind "RALT"           "                                                         
 bind "RWIN"           "                                                                     ; fin_keycontainer";                    // This is the windows (os) key to the right of the spacebar
 bind "APP"            "                                                                     ; fin_keycontainer";                    // This is the menu (right click) key.
 bind "RCTRL"          "                                                                     ; fin_keycontainer";                    // This is the right control key
-bind "LEFTARROW"      "                                                                     ; fin_keycontainer";                    // This is the left arrow key
-bind "DOWNARROW"      "                                                                     ; fin_keycontainer";                    // This is the down arrow key
-bind "RIGHTARROW"     "                                                                     ; fin_keycontainer";                    // This is the right arrow key
+bind "LEFTARROW"      "yaw -25   0 0;                                                       ; fin_keycontainer";                    // This is the left arrow key
+bind "DOWNARROW"      "yaw  2571 1 1;                                                       ; fin_keycontainer";                    // This is the down arrow key
+bind "RIGHTARROW"     "yaw  25   0 0;                                                       ; fin_keycontainer";                    // This is the right arrow key
 bind "KP_0"           "fin_clearchat;                                                       ; fin_keycontainer";                    // This is the Numpad 0 key
 bind "KP_DEL"         "fin_ahegao;                                                          ; fin_keycontainer";                    // This is the Numpad period/full stop key
 // ** Numpad enter key is in section [7.4] **
