--- a/config/utility/skinpictures.cfg
+++ b/config/utility/skinpictures.cfg
@@ -16,6 +16,15 @@ fps_max "60";                           // Frame rate limiter. 0=no limit. Does 
 hidehud "2147483647";                   // bitmask: 1=weapon selection, 2=flashlight, 4=all, 8=health, 16=player dead, 32=needssuit, 64=misc, 128=chat, 256=crosshair, 512=vehicle crosshair, 1024=in vehicle
 spec_hide_players "true";               // Toggle the visibility of scoreboard players.
 hud_showtargetid "false";               // Enables display of target names
+alias "fin_vmp_lowfov"  "fin_nothing disabled by skinpictures.cfg";
+alias "fin_vmp_highfov" "fin_nothing disabled by skinpictures.cfg";
+alias "fin_vmp_skins"   "fin_nothing disabled by skinpictures.cfg";
+alias "fin_vmp_doom"    "fin_nothing disabled by skinpictures.cfg";
+alias "fin_vmp_cmgp"    "fin_nothing disabled by skinpictures.cfg";
+alias "fin_vmp_desktop" "fin_nothing disabled by skinpictures.cfg";
+alias "fin_vmp_couch"   "fin_nothing disabled by skinpictures.cfg";
+alias "fin_vmp_classic" "fin_nothing disabled by skinpictures.cfg";
+alias "fin_vmp_knife"   "fin_nothing disabled by skinpictures.cfg";
 
 
 
