--- a/practice.cfg
+++ b/practice.cfg
@@ -4,9 +4,9 @@ echoln "[practice.cfg] Start of practice.cfg";
 
 echoln "[practice.cfg] ";
 echoln "[practice.cfg] Loading...";
-echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.10";
+echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.11";
 echoln "[practice.cfg] steamcommunity.com/id/bigfinfrank";
-echoln "[practice.cfg] Last edited: November 3rd 2023";
+echoln "[practice.cfg] Last edited: November 15th 2023";
 echoln "[practice.cfg] ";
 
 
@@ -88,6 +88,7 @@ mobile_fps_increase_during_charging "true";             // MOBILE_FPS_CONTROL: I
 sv_hibernate_postgame_delay "inf";                      // # of seconds to wait after final client leaves before hibernating.
 sv_hibernate_when_empty "false";                        // Puts the server into extremely low CPU usage mode when no clients connected
 sv_phys_sleep_enable "false";                           // Enable sleeping for dynamic physics bodies.
+sv_maxuptimelimit "0";                                  // Number of hours to operate before trying sv_shutdown.
 fps_max "0";                                            // Frame rate limiter.  0=no limit.  Does not apply to dedicated server.
 fps_max_ui "0";                                         // Frame rate limiter while the game UI is displayed.  0=no limit.  Does not apply to dedicated server.
 fps_max_tools "0";                                      // Additional frame rate limit while in tools mode and a window other than the game window has focus. Note that fps_max still applies, this only allows the maximum frame rate for tools mode to be lower. 0=no tools specific limit.
@@ -376,9 +377,9 @@ respawn_player;                                         // Respawns the player f
 
 echoln "[practice.cfg] ";
 echoln "[practice.cfg] Loaded!";
-echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.10";
+echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.11";
 echoln "[practice.cfg] steamcommunity.com/id/bigfinfrank";
-echoln "[practice.cfg] Last edited: November 3rd 2023";
+echoln "[practice.cfg] Last edited: November 15th 2023";
 echoln "[practice.cfg] ";
 
 
