--- a/config/aliases/aliases_init.cfg
+++ b/config/aliases/aliases_init.cfg
@@ -9,6 +9,8 @@ alias "q"   "quit";                                           // Quit the game
 alias "k"   "kill";                                           // Kills the player with generic damage
 alias "bp"  "bot_place";                                      // Places a bot from the map at where the local player is pointing.
 alias "dbg" "clear; exec ./config/primary/debug.cfg";         // Dumps extensive debug information to console and saves it to a file if possible
+alias "il"  "csgo_econ_action_preview";                       // Shorthand for pasting inspect codes
+alias "gc"  "say_team ";                                      // Allows you to easily paste gen codes into console
 
 
 echoln "[aliases_init.cfg] {2} Registering meta utility aliases used by other aliases";
