--- a/config/primary/misc.cfg
+++ b/config/primary/misc.cfg
@@ -10,7 +10,7 @@ sv_logfile "true";                                              // Log server in
 sv_logbans "true";                                              // Log server bans in the server logs.
 sv_logecho "true";                                              // Echo log information to the console.
 con_enable "true";                                              // Allows the console to be activated.
-developer "4";                                                  // This turns on a bunch of dev commands and features
+developer "2147483647";                                         // This turns on a bunch of dev commands and features
 mp_logdetail "3";                                               // Logs attacks. Values are: 0=off, 1=enemy, 2=teammate, 3=both)
 mp_logmoney "true";                                             // Enables money logging. Values are: 0=off, 1=on
 mp_logdetail_items "true";                                      // Logs a line any time a player acquires or loses an item.
@@ -45,12 +45,14 @@ sv_holiday_mode "0";                                            // 0 = OFF, 1 = 
 
 
 echoln "[misc.cfg] {4} Finishing up";
-exec "./config/utility/grammarly/disconnect.cfg";                  // "Autocorrect" aliases for the disconnect command
-exec "./config/utility/grammarly/exit.cfg";                        // "Autocorrect" aliases for the exit command
-exec "./config/utility/grammarly/quit.cfg";                        // "Autocorrect" aliases for the quit command
+exec "./config/utility/grammarly/disconnect.cfg";               // "Autocorrect" aliases for the disconnect command
+exec "./config/utility/grammarly/exit.cfg";                     // "Autocorrect" aliases for the exit command
+exec "./config/utility/grammarly/quit.cfg";                     // "Autocorrect" aliases for the quit command
 r_dof_override_near_blurry "80";                                // Sets depth of field blur to blur everything behind guns (80 isn't scientific, just what looked correct). Only applies when r_dof_override is set to true.
+game_alias "competitive";                                       // Set the configuration of game type and mode based on game alias like "deathmatch".
 game_type "0";                                                  // The current game type. See GameModes.txt.
 game_mode "1";                                                  // The current game mode (based on game type)
+sv_skirmish_id "0";                                             // Dedicated server skirmish id to run
 
 
 
