--- a/config/primary/safety.cfg
+++ b/config/primary/safety.cfg
@@ -19,6 +19,7 @@ cl_join_advertise "0";                                          // Advertise joi
 sv_tags "hidden";                                               // Server tags. Used to provide extra information to clients when they're browsing for servers. Separate tags with a comma. (hidden hides from community server list)
 sv_pure "2";                                                    // Forces all client files to match the server's (except for a certain exempt files)
 sv_pure_trace "1";                                              // If set to 1, the server will print a message whenever a client is verifying a CRC for a file.
+sv_reliableavatardata "true";                                   // Use server overrides for steam avatars
 sv_prime_accounts_only "true";                                  // When this setting is enabled only prime users can connect to this game server.
 sv_kick_players_with_cooldown "2";                              // (0: do not kick on insecure servers; 1: kick players with Untrusted status or convicted by Overwatch; 2: kick players with any cooldown)
 sv_playerradio_use_allowlist "true";                            // playerradio commands may only use responses from an allow list of commands.
