--- a/config/primary/ui.cfg
+++ b/config/primary/ui.cfg
@@ -50,6 +50,7 @@ cl_draw_only_deathnotices "false";                              // For drawing o
 cl_drawhud_force_deathnotices "1";                              // 0: default; 1: draw deathnotices even if hud disabled; -1: force no deathnotices
 cl_inventory_debug_tooltip "true";
 cl_allow_animated_avatars "false";                              // Whether or not to allow animated avatars
+cl_deathnotices_show_numbers "2";                               // 0: default; 1: draw names as just numbers; 2: append number on killer and victim to the name
 cl_teamid_overhead_mode "2";                                    // Always show team ID over teammates. 1 = pips; 2 = pips, name, and equipment
 cl_drawhud_force_radar "1";                                     // 0: default; 1: draw radar even if hud disabled; -1: force no radar
 cl_drawhud_specvote "true";                                     // 1: default; 0: disables vote UI for spectators
