--- a/config/utility/skinpictures.cfg
+++ b/config/utility/skinpictures.cfg
@@ -2,29 +2,48 @@ echoln "[skinpictures.cfg] Start of skinpictures.cfg";
 
 
 
+echoln "[skinpictures.cfg] {1} Enabling depth of field blur";
 r_dof_override "true";
-r_show_build_info "false";              // Build information. Leave this enabled when submitting bug screenshots and videos, please!
 r_dof_override_near_blurry "80";
-cl_draw_only_deathnotices "true";       // For drawing only the crosshair and death notices (used for moviemaking)
-cl_drawhud "false";                     // Enable the rendering of the hud
+
+
+echoln "[skinpictures.cfg] {2} Hiding hud elements";
 cl_drawhud_force_teamid_overhead "-1";  // 0: default; 1: draw teamid even if hud disabled; -1: force no teamid
 cl_drawhud_force_deathnotices "-1";     // 0: default; 1: draw deathnotices even if hud disabled; -1: force no deathnotices
+cl_draw_only_deathnotices "true";       // For drawing only the crosshair and death notices (used for moviemaking)
 cl_drawhud_force_radar "-1";            // 0: default; 1: draw radar even if hud disabled; -1: force no radar
 cl_drawhud_specvote "0";                // 1: default; 0: disables vote UI for spectators
+cl_drawhud "false";                     // Enable the rendering of the hud
 crosshair "false";
-fps_max "60";                           // Frame rate limiter. 0=no limit. Does not apply to dedicated server.
-hidehud "2147483647";                   // bitmask: 1=weapon selection, 2=flashlight, 4=all, 8=health, 16=player dead, 32=needssuit, 64=misc, 128=chat, 256=crosshair, 512=vehicle crosshair, 1024=in vehicle
-spec_hide_players "true";               // Toggle the visibility of scoreboard players.
+hidehud "2147483626";                   // bitmask: 1=weapon selection, 2=flashlight, 4=all, 8=health, 16=player dead, 32=needssuit, 64=misc, 128=chat, 256=crosshair, 512=vehicle crosshair, 1024=in vehicle | 2147483626 = X1111111 11111111 11111111 11101010
 hud_showtargetid "false";               // Enables display of target names
+spec_hide_players "true";               // Toggle the visibility of scoreboard players.
+r_show_build_info "false";              // Build information. Leave this enabled when submitting bug screenshots and videos, please!
+
+
+echoln "[skinpictures.cfg] {3} Setting frame rate limiter to 60 to prevent tearing during screen recordings";
+fps_max "60";                                           // Frame rate limiter. 0=no limit. Does not apply to dedicated server.
+fps_max_ui "60";                                        // Frame rate limiter while the game UI is displayed.  0=no limit.  Does not apply to dedicated server.
+fps_max_tools "60";                                     // Additional frame rate limit while in tools mode and a window other than the game window has focus. Note that fps_max still applies, this only allows the maximum frame rate for tools mode to be lower. 0=no tools specific limit.
+battery_saver "true";                                   // OBSOLETE replaced by mobile_fps_* - Battery saver mode. 0=off, 1=on
+mobile_fps_limit "60";                                  // MOBILE_FPS_CONTROL: Mobile FPS limit - 15, 30, 60
+mobile_fps_increase_during_touch "true";                // MOBILE_FPS_CONTROL: If true we increase framerate limit during touch
+mobile_fps_increase_during_charging "true";             // MOBILE_FPS_CONTROL: If true we increase framerate limit while charging
+
+
+echoln "[skinpictures.cfg] {4} Disabling most viewmodel presets and changing viewmodel to fin_vmp_skins";
 alias "fin_vmp_lowfov"  "fin_nothing disabled by skinpictures.cfg";
 alias "fin_vmp_highfov" "fin_nothing disabled by skinpictures.cfg";
-alias "fin_vmp_skins"   "fin_nothing disabled by skinpictures.cfg";
 alias "fin_vmp_doom"    "fin_nothing disabled by skinpictures.cfg";
 alias "fin_vmp_cmgp"    "fin_nothing disabled by skinpictures.cfg";
 alias "fin_vmp_desktop" "fin_nothing disabled by skinpictures.cfg";
 alias "fin_vmp_couch"   "fin_nothing disabled by skinpictures.cfg";
 alias "fin_vmp_classic" "fin_nothing disabled by skinpictures.cfg";
 alias "fin_vmp_knife"   "fin_nothing disabled by skinpictures.cfg";
+fin_vmp_skins;
+
+
+echoln "[skinpictures.cfg] Remember you can use 'il' for inspect links ang 'gc' for gen codes!";
 
 
 
