--- a/config/aliases/aliases_controls.cfg
+++ b/config/aliases/aliases_controls.cfg
@@ -47,38 +47,44 @@ alias "fin_jumped"  "-fin_desubtick_duck";
 alias "fin_crouched" "-fin_desubtick_duck";
 
 
-echoln "[aliases_controls.cfg] {4} Registering better +use aliases";              // For the use spam part, credit to: https://reddit.com/comments/5xila4
+echoln "[aliases_controls.cfg] {4} Registering jump throw alias";
+alias "+fin_jumpthrowthrow" "-fin_desubtick_attack; -fin_desubtick_attack2";
+alias "-fin_jumpthrowjump"  "-fin_desubtick_jump";
+alias "+fin_jumpthrowjump"  "+fin_desubtick_jump";
+
+
+echoln "[aliases_controls.cfg] {5} Registering better +use aliases";              // For the use spam part, credit to: https://reddit.com/comments/5xila4
 alias "+fin_betteruse" "+fin_desubtick_use; bind mwheeldown fin_usespam;         bind mwheelup  fin_usespam;         gameinstructor_enable true";
 alias "-fin_betteruse" "-fin_desubtick_use; bind mwheeldown +fin_desubtick_jump; bind mwheelup +fin_desubtick_jump;  gameinstructor_enable false";
 alias "fin_usespam"    "-fin_desubtick_use; bind mwheeldown +fin_desubtick_use;  bind mwheelup +fin_desubtick_use";
 
 
-echoln "[aliases_controls.cfg] {5} Registering Hold-for-knife aliases";
+echoln "[aliases_controls.cfg] {6} Registering Hold-for-knife aliases";
 alias "+fin_knife" "+fin_autoknifeinspect";                     // Hold-for-knife bind, while holding the key you will
 alias "-fin_knife" "lastinv";                                   // hold your knife and go back to your last gun on release
 
 
-echoln "[aliases_controls.cfg] {6} Registering jump throw aliases";
+echoln "[aliases_controls.cfg] {7} Registering jump throw aliases";
 alias "+fin_jthrow" "+fin_desubtick_jump; -fin_desubtick_attack; -fin_desubtick_attack2";
 alias "-fin_jthrow" "-fin_desubtick_jump";
 
 
-echoln "[aliases_controls.cfg] {7} Registering alias to disable jumping while shooting";  // Credit to: https://reddit.com/comments/73wcsz
+echoln "[aliases_controls.cfg] {8} Registering alias to disable jumping while shooting";  // Credit to: https://reddit.com/comments/73wcsz
 alias "+noscroll_attack" "+fin_desubtick_attack; bind mwheeldown  fin_nothing;        bind mwheelup  fin_nothing";
 alias "-noscroll_attack" "-fin_desubtick_attack; bind mwheeldown +fin_desubtick_jump; bind mwheelup +fin_desubtick_jump";
 
 
-echoln "[aliases_controls.cfg] {8} Registering Anti-AFK aliases";
+echoln "[aliases_controls.cfg] {9} Registering Anti-AFK aliases";
 alias "fin_antiafk"  "+fin_desubtick_left; +fin_desubtick_moveright; +fin_desubtick_attack2; +fin_desubtick_sprint";
 alias "fin_antiafk2" "-fin_desubtick_left; -fin_desubtick_moveright; -fin_desubtick_attack2; -fin_desubtick_sprint";
 
 
-echoln "[aliases_controls.cfg] {9} Registering long jump aliases";
+echoln "[aliases_controls.cfg] {10} Registering long jump aliases";
 alias "+fin_longjump" "+fin_desubtick_duck; +fin_desubtick_jump";
 alias "-fin_longjump" "-fin_desubtick_duck; -fin_desubtick_jump";
 
 
-echoln "[aliases_controls.cfg] {10} Registering null-cancelling movement aliases";
+echoln "[aliases_controls.cfg] {11} Registering null-cancelling movement aliases";
 alias "+fin_ncmforward"    "-fin_desubtick_back;    +fin_desubtick_forward; alias fin_ncmcancelforward fin_fix_forward";
 alias "+fin_ncmback"       "-fin_desubtick_forward; +fin_desubtick_back;    alias fin_ncmcancelback    fin_fix_back";
 alias "+fin_ncmleft"       "-fin_desubtick_right;   +fin_desubtick_left;    alias fin_ncmcancelleft    fin_fix_left";
@@ -97,11 +103,11 @@ alias "fin_ncmcancelleft"    "";
 alias "fin_ncmcancelright"   "";
 
 
-echoln "[aliases_controls.cfg] {13} Registering free-acceleration bhop alias";
+echoln "[aliases_controls.cfg] {12} Registering free-acceleration bhop alias";
 alias "fin_highveljump" "+fin_desubtick_jump; -fin_desubtick_back; -fin_desubtick_jump";
 
 
-echoln "[aliases_controls.cfg] {14} Registering jump bug aliases";
+echoln "[aliases_controls.cfg] {13} Registering jump bug aliases";
 alias "+fin_jumpbug" "-fin_desubtick_duck; +fin_desubtick_jump";
 alias "-fin_jumpbug" "-fin_desubtick_jump";
 
