--- a/config/primary/binds.cfg
+++ b/config/primary/binds.cfg
@@ -77,7 +77,7 @@ bind "KP_PLUS"        "                                                         
 
 echoln "[binds.cfg] {5} Configuring binds for keyboard row 4";
 bind "CAPSLOCK"       "                                                                     ; fin_keycontainer";                    // This is the caps lock key
-bind "A"              "                                                                     ; fin_keycontainer";                    // This is the a key
+bind "A"              "+fin_jumpthrowjump; +fin_jumpthrowthrow;                             ; fin_keycontainer";                    // This is the a key
 bind "S"              "+fin_ncmleft;                                                        ; fin_keycontainer";                    // This is the s key
 bind "D"              "+fin_ncmback;                                                        ; fin_keycontainer";                    // This is the d key
 bind "F"              "+fin_ncmright;                                                       ; fin_keycontainer";                    // This is the f key
