--- a/config/primary/misc.cfg
+++ b/config/primary/misc.cfg
@@ -42,7 +42,7 @@ spec_replay_autostart "false";                                  // Auto-start Ki
 sv_matchend_drops_enabled "true";                               // Rewards gameplay time is always accumulated for players, but drops at the end of the match can be prevented
 sv_competitive_minspec "true";                                  // Enable to force certain client convars to minimum/maximum values to help prevent competitive advantages.
 sv_holiday_mode "0";                                            // 0 = OFF, 1 = Halloween, 2 = Winter
-
+host_timescale "1";                                             // Prescale the clock by this amount.
 
 echoln "[misc.cfg] {4} Finishing up";
 exec "./config/utility/grammarly/disconnect.cfg";               // "Autocorrect" aliases for the disconnect command
