--- a/config/primary/ui.cfg
+++ b/config/primary/ui.cfg
@@ -64,6 +64,7 @@ hud_showtargetid "true";                                        // Enables displ
 r_show_build_info "true";                                       // Build information. Leave this enabled when submitting bug screenshots and videos, please!
 spec_hide_players "false";                                      // Toggle the visibility of scoreboard players.
 ui_party_msg_sound_enabled "false";                             // When enabled, lobby messages will play a short sound
+ui_mainmenu_bkgnd_movie_1016BB11 "de_vertigo";                  // Main menu background movie
 ui_steam_overlay_notification_position_vert "0";                // Steam overlay notification position vertical offset
 ui_steam_overlay_notification_position_horz "80";               // Steam overlay notification position horizontal offset
 ui_steam_overlay_notification_position "topright";              // Steam overlay notification position
