--- a/config/primary/visuals.cfg
+++ b/config/primary/visuals.cfg
@@ -34,7 +34,7 @@ r_dof_override "false";
 r_fullscreen_gamma "2.2";                                       // Gamma 'typically 2.2 for CRT and 1.7 for LCD'
 r_player_visibility_mode "1";                                   // Improves the legibility of players in low contrast situations. Enabling Boost Player Contrast can degrade graphics performance.
 engine_low_latency_sleep_after_client_tick "true";              // When r_low_latency is enabled, this moves the low latency sleep on tick frames to happen after client simulation.
-
-
+mat_fullbright "0";
+mat_disable_normal_mapping "false";
 
 echoln "[visuals.cfg] End of visuals.cfg";
