--- a/config/primary/audio.cfg
+++ b/config/primary/audio.cfg
@@ -37,6 +37,7 @@ snd_mvp_volume "0.03";                                          // Changes the m
 echoln "[audio.cfg] {2} Changing miscellaneous sound settings";
 cl_borrow_music_from_player_slot "-1";
 sv_ignoregrenaderadio "true";                                   // Turn off Fire in the hole messages
+bot_chatter "off";                                              // Control how bots talk. Allowed values: 'off', 'radio', 'minimal', or 'normal'.
 snd_headphone_eq "1";                                           // Select Headphone EQ Preset (0: Natural, 1: Crisp, 2: Smooth)
 snd_spatialize_lerp "0";                                        // "L/R Isolation" in-game audio setting
 snd_mute_losefocus "false";                                     // Mute sounds when losing focus
@@ -45,9 +46,9 @@ snd_steamaudio_enable_perspective_correction "true";            // Enable perspe
 snd_mute_mvp_music_live_players "true";                         // If set, MVP music is muted if players from both teams are still alive.
 voice_always_sample_mic "true";                                 // For systems experiencing a hang/stall when using voice chat.
 voice_test_log_send "true";
-voice_threshold "0";
 voice_loopback "true";
-bot_chatter "off";                                              // Control how bots talk. Allowed values: 'off', 'radio', 'minimal', or 'normal'.
+voice_threshold "0";                                            // 0 0
+voice_vox "0";                                                  // Voice chat uses a vox-style always on
 // snd_mix_async "true";                                        // [developmentonly] 0: Synchronous sound mixing (for CPUs with very few threads) 1: Asynchronous sound mixing (for CPUs with many threads)
 // For snd_spatialize_lerp:
 // - 0% - Physically Accurate (default): Physically modeled sound panning behavior most accurately reflecting the emitter position.
