--- a/config/primary/controls.cfg
+++ b/config/primary/controls.cfg
@@ -5,11 +5,13 @@ echoln "[controls.cfg] Start of controls.cfg";
 echoln "[controls.cfg] {1} Changing mouse and sensitivity settings";
 zoom_sensitivity_ratio "0.818933027098955175";                  // Additional mouse sensitivity scale factor applied when FOV is zoomed in. See https://www.reddit.com/r/GlobalOffensive/comments/43urd4
 cl_sniper_delay_unscope "false";                                // 0: Instantly unscope on fire 1: Delay visual unscope after firing
+cl_sniper_auto_rezoom "true";                                   // Auto-rezoom snipers after a shot
 cl_debounce_zoom "false";                                       // Whether or not to disable holding secondary fire to cycle zoom levels
-sensitivity "3.181818";                                         // Mouse sensitivity.
-mouse_inverty "false";                                          // Reverse Mouse
-m_pitch "0.022";                                                // Mouse pitch factor (0.022 is default) - if you don't know what this is, don't mess with it.
+cl_mouselook "true"	                                            // Set to 1 to use mouse for look, 0 for keyboard look. Cannot be set while connected to a server.
 m_yaw "0.022";                                                  // Mouse yaw factor (0.022 is default) - if you don't know what this is, don't mess with it.
+m_pitch "0.022";                                                // Mouse pitch factor (0.022 is default) - if you don't know what this is, don't mess with it.
+mouse_inverty "false";                                          // Reverse Mouse
+sensitivity "3.181818";                                         // Mouse sensitivity.
 // I recommend figuring out your eDPI and then changing your
 // mouse DPI to its highest and adjusting your sensitivity.
 // It's better for the game engine to get more precise data
@@ -27,9 +29,10 @@ m_yaw "0.022";                                                  // Mouse yaw fac
 
 echoln "[controls.cfg] {2} Other controls";
 cl_scoreboard_mouse_enable_binding "+fin_desubtick_attack2";    // Name of the binding to enable mouse selection in the scoreboard
+cl_inventory_radial_immediate_select "true";                    // In inventory selection radials. Select weapons the moment the cursor highlights them. Otherwise, only select the selected item on exit.
+cl_inventory_radial_tap_to_cycle "true";                        // In inventory selection radials. Select weapons the moment the cursor highlights them. Otherwise, only select the selected item on exit.
+cl_buywheel_nonumberpurchasing "true";                          // Set non-zero to prevent buy wheel from purchasing via number keys
 option_speed_method "false";                                    // Input toggle control
 option_duck_method "false";                                     // Input toggle control
-
-
 
 echoln "[controls.cfg] End of controls.cfg";
