--- a/boot.cfg
+++ b/boot.cfg
@@ -95,5 +95,9 @@ sv_soundscape_printdebuginfo
 test_list_entities;                                             // test-list entities
 
 
+echoln "[boot.cfg] {4} Executing debug.cfg";
+exec "./config/primary/debug.cfg";
+
+
 
 echoln "[boot.cfg] Start of boot.cfg";
