--- a/config/defensive_values/defensive_values_17.cfg
+++ b/config/defensive_values/defensive_values_17.cfg
@@ -2,32 +2,31 @@ echoln "[defensive_values_17.cfg] Start of defensive_values_17.cfg";
 
 
 
-echoln "[defensive_values_17.cfg] {1} Fetching defensive convars 1201 through 1225";
-incrementvar "r_freeze_sceneobjects"                                        "-18446744073709552000" "18446744073709552000" "0"; // false
-incrementvar "panorama_early_anim_dispatch"                                 "-18446744073709552000" "18446744073709552000" "0"; // true
-incrementvar "cl_script_break_in_native_debugger_on_error"                  "-18446744073709552000" "18446744073709552000" "0"; // false
-incrementvar "cl_script_attach_debugger_at_startup"                         "-18446744073709552000" "18446744073709552000" "0"; // false
-incrementvar "spec_replay_review_sound"                                     "-18446744073709552000" "18446744073709552000" "0"; // true - When set to non-0, a sound effect is played during Killer Replay
-incrementvar "spec_replay_rate_slowdown"                                    "-18446744073709552000" "18446744073709552000" "0"; // 1 - The part of Killer Replay right before death is played at this rate
-incrementvar "spec_replay_rate_slowdown_length"                             "-18446744073709552000" "18446744073709552000" "0"; // 0.5 - The part of Killer Replay right before death is played at this rate
-incrementvar "spec_replay_fadein"                                           "-18446744073709552000" "18446744073709552000" "0"; // 0.75 - Amount of time in seconds it takes to visually fade into replay, or into real-time after replay
-incrementvar "spec_replay_fadeout"                                          "-18446744073709552000" "18446744073709552000" "0"; // 0.75 - Amount of time in seconds it takes to visually fade out of replay, or out of real-time before replay
-incrementvar "spec_replay_sound_fadein"                                     "-18446744073709552000" "18446744073709552000" "0"; // 0.05 - Amount of time in seconds it takes to fade in the audio before or after replay
-incrementvar "spec_replay_sound_fadeout"                                    "-18446744073709552000" "18446744073709552000" "0"; // 0 - Amount of time in seconds it takes to fade out the audio before or after replay
-incrementvar "spec_replay_cache_ragdolls"                                   "-18446744073709552000" "18446744073709552000" "0"; // true - when set to 0, ragdolls will settle dynamically before and after Killer Replay
-incrementvar "spec_replay_others_experimental"                              "-18446744073709552000" "18446744073709552000" "0"; // false - Replay the last death of the round, if possible. Disabled on official servers by default. Experimental.
-incrementvar "spec_replay_victim_pov"                                       "-18446744073709552000" "18446744073709552000" "0"; // false - Killer Replay - replay from victim's point of view (1); the default is killer's (0). Experimental.
-incrementvar "cl_predictioncopy_runs"                                       "-18446744073709552000" "18446744073709552000" "0"; // true
-incrementvar "cl_pred_build_verbose"                                        "-18446744073709552000" "18446744073709552000" "0"; // false - Verbose spew when building prediction optimized data runs.
-incrementvar "mm_dlcs_mask_fake"                                            "-18446744073709552000" "18446744073709552000" "0"; // 
-incrementvar "mm_dlcs_mask_extras"                                          "-18446744073709552000" "18446744073709552000" "0"; // 0
-incrementvar "mm_tu_string"                                                 "-18446744073709552000" "18446744073709552000" "0"; // 00000000
-incrementvar "diffcheck_playerslot"                                         "-18446744073709552000" "18446744073709552000" "0"; // 0
-incrementvar "diffcheck_spew"                                               "-18446744073709552000" "18446744073709552000" "0"; // true - Actually show diffcheck results.
-incrementvar "diffcheck_spew_diff_only"                                     "-18446744073709552000" "18446744073709552000" "0"; // false - Show diff only.
-incrementvar "diffcheck_spew_diff_filter"                                   "-18446744073709552000" "18446744073709552000" "0"; //  - Show diff with matching filter substring only.
-incrementvar "diffcheck"                                                    "-18446744073709552000" "18446744073709552000" "0"; // true - Activate diffcheck system.
-incrementvar "r_temp"                                                       "-18446744073709552000" "18446744073709552000" "0"; // true
+echoln "[defensive_values_17.cfg] {1} Fetching defensive convars 1201 through 1224";
+incrementvar "panorama_early_anim_dispatch"                                 "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // true
+incrementvar "cl_script_break_in_native_debugger_on_error"                  "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // false
+incrementvar "cl_script_attach_debugger_at_startup"                         "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // false
+incrementvar "spec_replay_review_sound"                                     "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // true - When set to non-0, a sound effect is played during Killer Replay
+incrementvar "spec_replay_rate_slowdown"                                    "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // 1 - The part of Killer Replay right before death is played at this rate
+incrementvar "spec_replay_rate_slowdown_length"                             "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // 0.5 - The part of Killer Replay right before death is played at this rate
+incrementvar "spec_replay_fadein"                                           "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // 0.75 - Amount of time in seconds it takes to visually fade into replay, or into real-time after replay
+incrementvar "spec_replay_fadeout"                                          "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // 0.75 - Amount of time in seconds it takes to visually fade out of replay, or out of real-time before replay
+incrementvar "spec_replay_sound_fadein"                                     "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // 0.05 - Amount of time in seconds it takes to fade in the audio before or after replay
+incrementvar "spec_replay_sound_fadeout"                                    "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // 0 - Amount of time in seconds it takes to fade out the audio before or after replay
+incrementvar "spec_replay_cache_ragdolls"                                   "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // true - when set to 0, ragdolls will settle dynamically before and after Killer Replay
+incrementvar "spec_replay_others_experimental"                              "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // false - Replay the last death of the round, if possible. Disabled on official servers by default. Experimental.
+incrementvar "spec_replay_victim_pov"                                       "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // false - Killer Replay - replay from victim's point of view (1); the default is killer's (0). Experimental.
+incrementvar "cl_predictioncopy_runs"                                       "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // true
+incrementvar "cl_pred_build_verbose"                                        "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // false - Verbose spew when building prediction optimized data runs.
+incrementvar "mm_dlcs_mask_fake"                                            "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; //
+incrementvar "mm_dlcs_mask_extras"                                          "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // 0
+incrementvar "mm_tu_string"                                                 "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // 00000000
+incrementvar "diffcheck_playerslot"                                         "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // 0
+incrementvar "diffcheck_spew"                                               "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // true - Actually show diffcheck results.
+incrementvar "diffcheck_spew_diff_only"                                     "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // false - Show diff only.
+incrementvar "diffcheck_spew_diff_filter"                                   "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; //  - Show diff with matching filter substring only.
+incrementvar "diffcheck"                                                    "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // true - Activate diffcheck system.
+incrementvar "r_temp"                                                       "-340282356779733642748073463979561713663" "340282356779733642748073463979561713663" "0"; // true
 
 
 
