--- a/practice.cfg
+++ b/practice.cfg
@@ -4,9 +4,9 @@ echoln "[practice.cfg] Start of practice.cfg";
 
 echoln "[practice.cfg] ";
 echoln "[practice.cfg] Loading...";
-echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.12";
+echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.13";
 echoln "[practice.cfg] steamcommunity.com/id/bigfinfrank";
-echoln "[practice.cfg] Last edited: November 28th 2023";
+echoln "[practice.cfg] Last edited: December 9th 2023";
 echoln "[practice.cfg] ";
 
 
@@ -341,12 +341,11 @@ healthshot_healthboost_damage_multiplier "1";
 
 
 echoln "[practice.cfg] {25} Adjusting movement settings";
+sv_enablebunnyhopping "false";                          // Allow player speed to exceed maximum running speed
 sv_autobunnyhopping "false";                            // Players automatically re-jump while holding jump button
 mp_solid_teammates "2";                                 // How solid are teammates: 0 = transparent; 1 = fully solid; 2 = can stand on top of heads
 
 
-echoln "[practice.cfg]  ";
-demo_info;                                              // Print version info string.
 echoln "[practice.cfg]  ";
 status;                                                 // Print connection status
 echoln "[practice.cfg]  ";
@@ -379,9 +378,9 @@ respawn_player;                                         // Respawns the player f
 
 echoln "[practice.cfg] ";
 echoln "[practice.cfg] Loaded!";
-echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.12";
+echoln "[practice.cfg] Fin's CS2 Practice Config 1.0.13";
 echoln "[practice.cfg] steamcommunity.com/id/bigfinfrank";
-echoln "[practice.cfg] Last edited: November 28th 2023";
+echoln "[practice.cfg] Last edited: December 9th 2023";
 echoln "[practice.cfg] ";
 
 
